# manager

./: .directory  CMakeLists.txt  package.xml
Modules/: FindGA2H.cmake
launch/: manager.launch
src/: manager_node.cpp  manager_node.h  server_node.cpp
txt/: task.txt
urdf/: UR5.urdf  baxter_DAE.urdf  irb120.urdf  irb2400.urdf  irb4400l_30.urdf  irb5400.urdf  irb6640.urdf  kuka_lwr_pg70_gripper.urdf  robot.urdf
urdf/pg70_gripper/: pg70_body.wrl  pg70_finger1.wrl  pg70_finger2.wrl
