<?xml version="1.0"?>
<package>
  <name>manager</name>
  <version>0.0.0</version>
  <description>The manager package</description>

  <maintainer email="aleix.ripoll@todo.todo">aleix.ripoll</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>manager_rec_msgs</build_depend>
    <build_depend>tf</build_depend>
      <build_depend>kdl_parser</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>manager_rec_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>kdl_parser</run_depend>

  <export>
  </export>
</package>
